--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "dependencies": {
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "bootstrap": "^4.0.0",
     "gulp-babel": "^7.0.1",
+    "gulp-connect-proxy": "^0.3.1",
+    "jquery": "^3.3.1",
     "jshint": "^2.9.5"
   }
 }
