--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^4.0.0",
     "gulp-babel": "^7.0.1",
     "gulp-connect-proxy": "^0.3.1",
+    "gulp-html-tag-include": "^1.0.1",
     "jquery": "^3.3.1",
     "jshint": "^2.9.5"
   }
